# tsrouter

./: .gitignore  pyproject.toml
notebooks/: classification.ipynb  classification3.ipynb  classification3backup.ipynb  eda.ipynb  ett_mcs_96.pkl  forecasting_analysis.ipynb  notebook_env2.db  reconstruction_analysis.ipynb  synthetic.ipynb
notebooks/ranking_results/ett/: best_model.pt
notebooks/ranking_results/exchange/: best_model.pt
notebooks/ranking_results/weather/: best_model.pt
notebooks/vqvae_results/weather/: test_metrics.json  training_history.json
notebooks/vqvae_results/weather/best_model/: best_model.pt
ranking_results/ett/cnn/: best_model.pt
ranking_results/ett/cnn/pred_1/: best_model.pt
ranking_results/ett/cnn/pred_32/: best_model.pt
ranking_results/ett/cnn/pred_4/: best_model.pt
ranking_results/ett/cnn/pred_64/: best_model.pt
ranking_results/ett/cnn/pred_8/: best_model.pt
ranking_results/ett/cnn/pred_96/: best_model.pt
ranking_results/ett/mlp/pred_1/: best_model.pt
ranking_results/ett/mlp/pred_32/: best_model.pt
ranking_results/ett/mlp/pred_64/: best_model.pt
ranking_results/ett/mlp/pred_8/: best_model.pt
ranking_results/ett/mlp/pred_96/: best_model.pt
ranking_results/weather/cnn/: best_model.pt
ranking_results/weather/cnn/pred_1/: best_model.pt
ranking_results/weather/mlp/: best_model.pt
scripts/: model_comparison.py  model_subset_selection.py  run_experiment.py
src/tsrouter/models/: cnn.py  mlp.py  rocket.py  xgboost.py
src/tsrouter/utils/: data_processing.py  evaluation.py  nn.py
(+10 files in other folders)
